--- a/free_rooms/easy-level/learn_linux.mkd
+++ b/free_rooms/easy-level/learn_linux.mkd
@@ -34,16 +34,21 @@
 ##### [Task 11] Binary 
    1. pinguftw 
 
-```sh
-Steps: 
-SSH into the IP address using the command: ssh shiba1@10.10.121.51. 
-Password is "shiba1". 
-Should be on the user shiba as can be seen that the user is now "shiba@nootnoot:~$". 
-To create a new file type: "touch noot.txt". 
-Type "ls" and you should see the file there. 
-You should also see that there is another file called "shiba1", this is the binary that we have to run for the answer. 
-Type "./shiba1" and it should print out the answer. 
-```
+> Steps: 
+>
+> SSH in using the command: "ssh shiba1@10.10.121.51". 
+>
+> Password is "shiba1". 
+>
+> You should be on the user shiba as can be seen that the user is now "shiba@nootnoot:~$". 
+>
+> To create a new file type: "touch noot.txt". 
+>
+> Type "ls" and you should see the file is now there. 
+>
+> You should also see that there is another file called "shiba1", this is the binary that we have to run for the answer. 
+>
+> Type "./shiba1" and it should print out the answer. 
 
 ##### [Task 12] su 
 
