--- a/free_rooms/easy-level/learn_linux.mkd
+++ b/free_rooms/easy-level/learn_linux.mkd
@@ -58,6 +58,45 @@
 > By typing "man su", you get more information about the 'su' command. 
 
 
+##### [Task 13] Section 4 - Linux Operators 
+   1. None 
+
+##### [Task 14] Section 4 - Linux Operators: ">"
+   1. echo twenty > test
+
+##### [Task 15] Section 4 - Linux Operators: ">>"
+   1. None
+
+##### [Task 16] Section 4 - Linux Operators: "&&"
+   1. None 
+
+##### [Task 17] Section 4 - Linux Operators: "&"
+   1. None 
+
+##### [Task 18] Section 4 - Linux Operators: "$" 
+   1. export nootnoot=1111
+   2. /home/shiba2
+
+> Hint: 
+> 
+> Given that you are currently can see this "shiba2@nootnoot:~$", it means that you are currently in the home environment. 
+> 
+> By typing "pwd" you can print the working directory, which is the answer for question 2.  
+
+
+##### [Task 19] Section 4 - Linux Operators: "|" 
+   1. None 
+
+##### [Task 20] Section 4- Linux Operators: ";" 
+   1. None 
+
+##### []
+
+
+
+
+
+
 
 
 
