--- a/free_rooms/easy-level/rp_nmap.mkd
+++ b/free_rooms/easy-level/rp_nmap.mkd
@@ -2,4 +2,40 @@
    1. None 
 
 ##### [Task 2]
-   1. -h 
+   1. -h
+> In addition, user can type in "man nmap"    
+   2. -sS
+> -sS/sT/sA/sW/sM:  TCP SYN/Connect()/ACK/Window/Maimon scans  
+   3. -sU
+> -sU: UDP Scan
+   4. -O
+> -O: Enable OS detection
+   5. -sV
+> -sV: Probe open ports to determine service/version info
+   6. -v
+> -v: Increase verbosity level (use -vv or more for greater effect)
+   7. -vv
+> -v: Increase verbosity level (use -vv or more for greater effect)
+   8. -oX
+> -oN/-oX/-oS/-oG <file>: Output scan in normal, XML, s|<rIpt kIddi3, and Grepable format, respectively, to the given filename.
+   9. -A 
+> -A: Enable OS detection, version detection, script scanning, and traceroute
+>
+> This is thought as being "loud" because the user is scanning for all information therefore scans the target quite aggressively.
+   10. -T5
+> -T<0-5>: Set timing template (higher is faster)
+   11. -p  
+> -p <port ranges>: Only scan specified ports. Ie: -p22; -p1-65535
+   12. -p- 
+> Rather than listing all the ports in a range, you can use the dash to symbolise all ports 
+   13. --script
+> --script=<Lua scripts>: <Lua scripts> is a comma separated list of directories, script-files or script-categories
+   14. --script vuln 
+> Given the hint it is clear to use the switch from task 13 to specify the name of the script 
+   15. -Pn
+> -Pn: Treat all hosts as online -- skip host discovery
+> 
+> Ping is used to test and see if the target is online, if it is online then it will successfully ping back
+>
+> Therefore by treating all hosts online, there is no need to ping the hosts since we assume they are all online
+   
