--- a/free_rooms/easy-level/wireshark_0x01.mkd
+++ b/free_rooms/easy-level/wireshark_0x01.mkd
@@ -2,3 +2,15 @@
 
 ##### [Task 1] - Introduction to wireshark 
    1. No answer needed
+
+##### [Task 2] - Installation: Windows
+   1. No answer needed
+
+##### [Task 3] - Installation: Linux
+   1. No answer needed 
+   
+##### [Task 4] - wireshark GUI: Basics 
+   1. No answer needed 
+   
+##### [Task 5] - Conclusion 
+   1. No answer needed 
