--- a/free_rooms/easy-level/rp_nessus.mkd
+++ b/free_rooms/easy-level/rp_nessus.mkd
@@ -9,36 +9,35 @@
    3. No answer needed
 
 ##### [Taks 3] Nessus Quiz 
-   1.
-   2.
-   3.
-   4.
-   5.
-   6.
-   7.
-   8.
+   1. New Scan
+   2. Policies 
+   3. Plugin Rules 
+   4. Scanners
+   5. Host Discovery 
+   6. Basic Network Scan
+   7. Credential Patch Audit 
+   8. Web Application Tests 
 
 ##### [Taks 4] Scanning!
    1. No answer needed
-   2.
-   3.
-   4.
+   2. Schedule
+   3. Port Scan (All Ports)
+   4. San Low Bandwidth Links
    5. No answer needed
-   6.
-   7.
-   8.
-   9.
+   6. Nessus SYN Scanner 
+   7. 6667
+   8. SSH Weak Algorithms Supported
+   9. Apache/2.4.99
 
 ##### [Taks 5] Wait, there's mail? 
    1. No answer needed
 
 ##### [Taks 6] So you're telling me that's how you set up a web app 
    1. No answer needed
-   2.
-   3.
-   4.
-   5.
-   6.
-   7.
-   
+   2. 10107
+   3. login.php 
+   4. .bak 
+   5. external/phpids/0.6/docs/examples/
+   6. Clickjacking
+   7. 5.5.9-lubuntu4.26
 
