--- a/free_rooms/easy-level/rp_nessus.mkd
+++ b/free_rooms/easy-level/rp_nessus.mkd
@@ -72,13 +72,70 @@
 ##### [Taks 4] Scanning!
    1. No answer needed
    2. Schedule
+> Once you've clicked the "Basic Network Scan", you'll be presented with some input fields for the scan
+>
+> In the "Settings" tab, you should be able to see the "BASIC" tab
+>
+> In that "BASIC" tab, you should be able to see a link to "Schedule"
+>
+> Once you have clicked "Schedule" and switched the "Enabled" button, you will be able to set a time
    3. Port Scan (All Ports)
+> In the same "SETTINGS" tab, you should be able to see a sub tab titled "DISCOVERY"
+>
+> In there, there should be a field called "Scan Type" 
+>
+> If you click on that drop down field and click "Port Scan (all ports)" 
+>
+> The description for Port Scanner settings should now be updated and mention: "Scan all ports (1-65535)"
    4. San Low Bandwidth Links
+> In the same "SETTINGS" tab, you should be able to see a sub tab titled "ADVANCED"
+>
+> In there, there should be a field called "Scan Type" 
+>
+> If you click on that drop down field and click "Scan low bandwidth links"
+>
+> The description for Performance options should now be updated and mention: "Slow down the scan when network congestion is detected"
    5. No answer needed
    6. Nessus SYN Scanner 
+> Once the scan is completed, if you click on the scan then you will be presented with an overview of the results
+>
+> Under the name of the scan, there should be a tab titled "Vulnerabilities" 
+> 
+> You will now be presented with all the results found by the scan
+>
+> If you click on the vulnerability titled "Nessus SYN scanner"
+>
+> You will gain more information about the vulnerability and in particular should be a subheading titled "Output" 
+>
+> In the "Output", you should be able to see which ports are open 
    7. 6667
+> In the same vulnerability information page (Nessus SYN Scanner)
+>
+> If you look at all the open ports, you can see that 3 ports are open: 22, 80, and 6667
+>
+> By process of elimination, it can be assumed that the port 6667 is the answer 
+>
+> Since port 22 is SSH and port 80 is HTTP
    8. SSH Weak Algorithms Supported
+> If you go back to the "Vulnerabilities" tab, you will see that all the vulnerabilities have a severity of "INFO" 
+>
+> This can be seen due to the blue INFO icon under the severity column in the table
+>
+> However for "SSH (Multiple Issues)" the icon is a purple MIXED 
+>
+> By clicking into the "SSH (Multiple Issues)"
+>
+> You will be presented with more vulnerabilities of different severities
+>
+> The vulnerability with the MEDIUM (yellow) icon belongs to "SSH Weak Algorithms Supported"
    9. Apache/2.4.99
+> If you go back to the "Vulnerabilities" tab, if we are looking for a web server, one example would be apache
+>
+> It can be seen that there is a vulnerability titled "Apache HTTP Server (Multiple Issues)" 
+>
+> Clicking into that vulnerability, we will be presented with more vulnerabilities, one of which is titled "Apache HTTP Server Version"
+>
+> If we were to click on that, then in the output subheading of the page, this should be visible: " Version   : 2.4.99" 
 
 ##### [Taks 5] Wait, there's mail? 
    1. No answer needed
@@ -91,4 +148,3 @@
    5. external/phpids/0.6/docs/examples/
    6. Clickjacking
    7. 5.5.9-lubuntu4.26
-
