--- a/free_rooms/easy-level/wireshark_0x01.mkd
+++ b/free_rooms/easy-level/wireshark_0x01.mkd
@@ -1,16 +1,16 @@
 #### Link to room - https://tryhackme.com/room/wireshark0x01
 
-##### [Task 1] - Introduction to wireshark 
+#### [Task 1] - Introduction to wireshark 
    1. No answer needed
 
-##### [Task 2] - Installation: Windows
+#### [Task 2] - Installation: Windows
    1. No answer needed
 
-##### [Task 3] - Installation: Linux
+#### [Task 3] - Installation: Linux
    1. No answer needed 
    
-##### [Task 4] - wireshark GUI: Basics 
+#### [Task 4] - wireshark GUI: Basics 
    1. No answer needed 
    
-##### [Task 5] - Conclusion 
+#### [Task 5] - Conclusion 
    1. No answer needed 
